# zuckerli

./: CMakeLists.txt  CMakeLists.txt.backup  README.md
include/: common.h  compressed_graph.h  context_model.h  decode.h  integer_coder.h  zuckerli.h
main/: decode_main.cc  encode_main.cc  sample_main.cc  test.cpp  traversal_main_compressed.cc
src/: ans.cc  bit_reader.cc  bit_writer.cc  common.cc  compressed_graph.cc  encode.cc  encode_main.cc  flags.cc  huffman.cc  uncompressed_graph.cc  zuckerli.cc  zuckerli.cpp
test/: ans_test.cc  benchmark_get_successors.cpp  benchmark_sample.cpp  bits_test.cc  common_test.cc  entropy_coder_common_test.cc  huffman_test.cc  roundtrip_test.cc  uncompressed_graph_test.cc
zuckerli_lib_test/: main.cc  readme
